Changelog
=========


1.3.2 (unreleased)
------------------

- Remove allow_buttons on BlogEntry - go back to global tinymce settings
  [mathias.leimgruber]

1.3.1 (2013-05-24)
------------------

- Change document byline: Remove ModificationDate, add CreationDate,
  disable default byline for Anonym users.
  [elio.schmutz]
  
- Disable the 'Comments ()' string if discussion is disabled on the given
  BlogEntry.
  [elio.schmutz]


1.3 (2013-04-16)
----------------

- Lawgiver support: map permissions.
  [jone]

- Use Month msgid function from plone
  [tschanzt]

- Exclude categories folder from navigation.
  [jone]

- Blog entry: use text/x-html-safe output format and only allow text/html input.
  [jone]

- Updated batching in blog view.
  [Julian Infanger]

- Show the amount of comments in blog listing.
  [Julian Infanger]

- Remove search blog viewlet.
  [Julian Infanger]

- Protect unused fields, so they are only visible for manager.
  [Julian Infanger]

- Implement a patched conversation view, which allows
  commenting on folderish types (i.e BlogEntry)
  [mathias.leimgruber]

- Remove old blog.tags.portlet from portlets.xml
  [mathias.leimgruber]

- Restore accidently removed image listing.
  [mathias.leimgruber]

- Restored info message if results are filtered on a criteria.
  [Julian Infanger]

- Use the same byline in blog entry used in overview.
  [Julian Infanger]

- Added new templates for blog and blog-entry. Requires Plone 4.
  [Julian Infanger]


1.2.4 (2012-10-10)
------------------

- Removed customized popupforms.js as we don't want to override Plone's
  current version. Our version contained a fix for comment form overlays,
  which is obsolete now, because p.a.discussion comments are no longer
  added with form overlays.
  [buchi]


1.2.3 (2012-08-20)
------------------

- Disable setting default page for Blog, BlogCategory and BlogEntry.
  Those types are not normal folders and setting the default page is therefore not common.
  [jone]
