@@ -5,6 +5,11 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
+- Add boolean field to blog entry, let the user decide if he want to
+  include the images directly into the blog entry or show the images as
+  gallery.
+  [mathias.leimgruber]
+
 - Remove allow_buttons on BlogEntry - go back to global tinymce settings
   [mathias.leimgruber]
 
@@ -14,7 +19,7 @@ Changelog
 - Change document byline: Remove ModificationDate, add CreationDate,
   disable default byline for Anonym users.
   [elio.schmutz]
-  
+
 - Disable the 'Comments ()' string if discussion is disabled on the given
   BlogEntry.
   [elio.schmutz]
